[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/view/ViewInspector.gd" type="Script" id=1]
[ext_resource path="res://res/icons/icon_X.svg" type="Texture" id=3]
[ext_resource path="res://res/fonts/LargFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/custom_ui/CustomTextureButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/elements/list/ListInfo.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/ui/nodes/NodeIcon.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/ui/general/VisibilityButton.tscn" type="PackedScene" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D mask;

void fragment(){
	 vec4 colour = texture(TEXTURE, UV);
    colour.a *= texture(mask, UV).a;

    COLOR = colour;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )

[node name="ViewInspector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2940.0
margin_bottom = -436.0
rect_min_size = Vector2( 900, 1624 )
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
show_behind_parent = true
margin_right = 900.0
margin_bottom = 1624.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 888.0
margin_bottom = 1612.0
rect_min_size = Vector2( 0, 1600 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
margin_right = 876.0
margin_bottom = 264.0
rect_min_size = Vector2( 0, 264 )
size_flags_horizontal = 3

[node name="NodeIcon" parent="PanelContainer/VBoxContainer/Control" instance=ExtResource( 9 )]
margin_left = 12.0
margin_top = 12.0
rect_min_size = Vector2( 240, 240 )

[node name="CustomTexture" parent="PanelContainer/VBoxContainer/Control/NodeIcon" index="0"]
material = SubResource( 2 )

[node name="CustomTextureButton" parent="PanelContainer/VBoxContainer/Control" instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -72.0
margin_right = -12.0
margin_bottom = -12.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
toggle = false
c_color = "Red"

[node name="Title" type="LineEdit" parent="PanelContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 876.0
margin_bottom = 369.0
custom_fonts/font = ExtResource( 4 )
caret_blink = true
caret_blink_speed = 0.5

[node name="Info" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 876.0
margin_bottom = 765.0
size_flags_vertical = 3

[node name="ListInfo" parent="PanelContainer/VBoxContainer/Info" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Links" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 765.0
margin_right = 876.0
margin_bottom = 1161.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Links"]
margin_right = 876.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Links/VBoxContainer"]
margin_right = 876.0
margin_bottom = 43.0
text = "Links:"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Links/VBoxContainer"]
margin_top = 51.0
margin_right = 876.0
margin_bottom = 51.0

[node name="Actions" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 1161.0
margin_right = 876.0
margin_bottom = 1557.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Actions"]
margin_right = 876.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Actions/VBoxContainer"]
margin_right = 876.0
margin_bottom = 43.0
text = "Actions:"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Actions/VBoxContainer"]
margin_top = 51.0
margin_right = 876.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ActionButton0" type="Button" parent="PanelContainer/VBoxContainer/Actions/VBoxContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 876.0
margin_bottom = 194.0
text = "Generate"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 1557.0
margin_right = 876.0
margin_bottom = 1600.0

[node name="BottomButton" type="Button" parent="PanelContainer/VBoxContainer/CenterContainer"]
margin_left = 394.0
margin_right = 482.0
margin_bottom = 43.0
text = "Open"

[node name="VisibilityButton" parent="." instance=ExtResource( 10 )]
anchor_left = 1.0
anchor_right = 1.0
margin_right = 0.0
rect_scale = Vector2( -1, 1 )

[connection signal="pressed" from="PanelContainer/VBoxContainer/Actions/VBoxContainer/VBoxContainer/ActionButton0" to="." method="_on_ActionButton0_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CenterContainer/BottomButton" to="." method="_on_BottomButton_pressed"]

[editable path="PanelContainer/VBoxContainer/Control/NodeIcon"]
